--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: arbor
+name: arborio
 description: "A Tree View, but really awesome"
 version: 0.1.0-beta
 repository: https://github.com/MelbourneDeveloper/treeview
