working but wrong away around

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -8,4 +8,5 @@ analyzer:
   errors:
     diagnostic_describe_all_properties: ignore
     dead_null_aware_expression: error
+    invalid_null_aware_operator: error
  
