--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: arborio
-description: "A Tree View, but really awesome"
+description: "An elegant, flexible Treeview with Animation. Display hierarchical data in Flutter."
 version: 0.2.0-beta
 repository: https://github.com/MelbourneDeveloper/treeview
 
