--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,28 +1,21 @@
-# Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: Deploy to GitHub Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
+    branches:
+      - main
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
-  group: "pages"
+  group: pages
   cancel-in-progress: false
 
 jobs:
-  # Single deploy job since we're just deploying
   deploy:
     environment:
       name: github-pages
@@ -31,13 +24,31 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      
+      # Set up Flutter environment
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.0.5' # Specify the Flutter version
+          channel: 'stable' # Specify the Flutter channel
+
+      # Build the Flutter web app
+      - name: Build Flutter Web App
+        run: |
+          flutter pub get
+          flutter build web --release
+
+      # Setup Pages
       - name: Setup Pages
         uses: actions/configure-pages@v4
+
+      # Upload artifact from the build directory
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
-          path: './example/build/web'
+          path: './example/build/web' # Ensure this is the path to the build output
+
+      # Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
