--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,6 @@ repository: https://github.com/MelbourneDeveloper/treeview
 environment:
   sdk: '>=3.2.3 <4.0.0'
 
-
 dependencies:
   cupertino_icons: ^1.0.2
   flutter:
@@ -19,3 +18,6 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+
+flutter:
+  uses-material-design: true
