--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: arborio
 description: "An elegant, flexible Treeview with Animation. Display hierarchical data in Flutter."
-version: 0.3.0-beta
+version: 1.0.0
 repository: https://github.com/MelbourneDeveloper/treeview
 
 environment:
